Active Tools Break Custom Gizmos #60289

Closed
opened 2019-01-07 19:27:04 +01:00 by Julian Eisel · 5 comments
Member

Blender Version
Broken: 3d2ff33c26

Short description of error

Using an active tool gizmo at the same time as a custom (as in Python defined) gizmo may entirely break gizmos.
This happens when the custom gizmo sets internal gizmo properties on redraws. We basically put Blender into a redraw + reinitialize loop then.

Exact steps for others to reproduce the error

  • Enter Scripting Workspace
  • In Text Editor, select {nav Templates > Python > Gizmo Custom Geometry}
  • Press "Run Script"
  • Select the light object (custom gizmo should appear)
  • Open toolbar, activate some transform gizmo
  • The transform gizmo will appear and disappear immediately. This should happen again after selecting a different object, and then the light again. The custom light gizmo won't function properly (glitchy hover highlight, dragging doesn't work).

Cause
The root cause is the gizmo properties sending a (NC_SCREEN | NA_EDITED) notifier when set.
If a custom gizmo sets any of these properties (e.g. alpha, matrix_basis, hide, etc.) in a redraw callback - something that should definitely supported -, that triggers such notifiers to be send on every redraw. While sending this notifer seems reasonable, that causes ED_screen_refresh & ED_area_initialize to be executed on every redraw too! These are not supposed to be used that way. The latter also reinitializes tools, causing a redraw which again causes the gizmo properties to send a notifier. Hence, this is a redraw + reinitialize loop.

Fixing
Gizmos properties should update the UI without causing ED_screen_refresh calls. AFAICS we only need to redraw the region the gizmo is in. A few options:

  • Add a new notifier type triggering a region redraw.
  • Use new message bus to tag region redraw.
  • Use property setter to tag region redraw.

Not sure which way we should go for fixing. I also don't have much time for this, so opening a report to ensure it's not forgotten.

**Blender Version** Broken: 3d2ff33c261593 **Short description of error** Using an active tool gizmo at the same time as a custom (as in Python defined) gizmo may entirely break gizmos. This happens when the custom gizmo sets internal gizmo properties on redraws. We basically put Blender into a redraw + reinitialize loop then. **Exact steps for others to reproduce the error** * Enter *Scripting* Workspace * In Text Editor, select {nav Templates > Python > Gizmo Custom Geometry} * Press "Run Script" * Select the light object (custom gizmo should appear) * Open toolbar, activate some transform gizmo - > The transform gizmo will appear and disappear immediately. This should happen again after selecting a different object, and then the light again. The custom light gizmo won't function properly (glitchy hover highlight, dragging doesn't work). **Cause** The root cause is the gizmo properties sending a `(NC_SCREEN | NA_EDITED)` notifier when set. If a custom gizmo sets any of these properties (e.g. `alpha`, `matrix_basis`, `hide`, etc.) in a redraw callback - something that should definitely supported -, that triggers such notifiers to be send **on every redraw**. While sending this notifer seems reasonable, that causes `ED_screen_refresh` & `ED_area_initialize` to be executed on every redraw too! These are **not** supposed to be used that way. The latter also reinitializes tools, causing a redraw which again causes the gizmo properties to send a notifier. Hence, this is a redraw + reinitialize loop. **Fixing** Gizmos properties should update the UI without causing `ED_screen_refresh` calls. AFAICS we only need to redraw the region the gizmo is in. A few options: * Add a new notifier type triggering a region redraw. * Use new message bus to tag region redraw. * Use property setter to tag region redraw. ---- Not sure which way we should go for fixing. I also don't have much time for this, so opening a report to ensure it's not forgotten.
Author
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Author
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Campbell Barton was assigned by Julian Eisel 2019-05-04 16:01:50 +02:00
Author
Member

This seems like a very typical use case of custom gizmos so definitely something that should be fixed for 2.80.

This seems like a very typical use case of custom gizmos so definitely something that should be fixed for 2.80.

This issue was referenced by 31b2c4c10a

This issue was referenced by 31b2c4c10a413b93551ba313fd93c77698207216

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60289
No description provided.