Fix T60289: changing gizmo properties causes excessive redraws